# horizon-earth

./: .gitignore  Cargo.toml  README.md
assets/shaders/: atmosphere.wgsl  globe.wgsl  label.wgsl  lines.wgsl  markers.wgsl  mask.wgsl  starfield.wgsl  tanker.wgsl  thick_lines.wgsl  track.wgsl
docs/: config-todo.md
horizon-ais/: Cargo.toml
horizon-ais/src/: main.rs
horizon-core/: Cargo.toml
horizon-core/src/: camera.rs  category.rs  frames.rs  lib.rs  orbit.rs  sun.rs  time.rs  units.rs  world.rs
horizon-data/: Cargo.toml
horizon-data/src/: lib.rs
src/: app.rs  camera.rs  main.rs  orbit.rs  tankers.rs
src/data/: mod.rs
src/earth/: mod.rs
src/renderer/: glyphs.rs  mesh.rs  mod.rs
src/ui/: mod.rs
