[package]
name = "horizon-earth"
version = "0.1.0"
edition = "2021"
description = "A Nord-themed 3D Earth visualization for Wayland desktops"

[[bin]]
name = "horizon"
path = "src/main.rs"

[dependencies]
horizon-core = { path = "horizon-core" }
horizon-data = { path = "horizon-data" }
winit = "0.30"
wgpu = "22.1"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
egui = "0.29"
# `clipboard` (arboard + smithay-clipboard) is omitted on purpose: smithay-clipboard
# segfaults in libwayland-client when its worker tears down the primary-selection
# proxy on exit (seen on niri/Wayland). This app has no use for clipboard. The
# `wayland`/`x11` features kept here are the *windowing* features, not clipboard.
egui-winit = { version = "0.29", default-features = false, features = ["links", "wayland", "x11"] }
egui-wgpu = "0.29"

[profile.release]
opt-level = 3
lto = "thin"

[workspace]
members = ["horizon-core", "horizon-data", "horizon-ais"]
